@@ -3,9 +3,7 @@ import java.io.PrintWriter;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -14,19 +12,11 @@ import java.util.stream.Stream;
  * Clase para la indexación de documentos procesados.
  */
 public class Indexador {
-
-    private static final String RUTA_SALIDA_PREPROCESADOR = "src/main/resources/output";
-    private static final String RUTA_INDICE_INVERTIDO = "src/main/resources/indice_invertido.txt";
-    private static final String RUTA_IDF = "src/main/resources/idf.txt";
-    private static final String RUTA_LONGITUD_DOCUMENTOS = "src/main/resources/longitud_documentos.txt";
     private final Map<String, Map<String, Double>> tfPorDocumento;
     private final Map<String, Double> idfPorTermino;
     private final Map<String, Double> longitudPorDocumento;
     private final Map<String, IndiceInvertidoEntrada> indiceInvertido;
 
-    /**
-     * Constructor para la clase Indexador.
-     */
     public Indexador() {
         this.tfPorDocumento = new ConcurrentHashMap<>();
         this.idfPorTermino = new ConcurrentHashMap<>();
@@ -34,141 +24,127 @@ public class Indexador {
         this.indiceInvertido = new ConcurrentHashMap<>();
     }
 
-    /**
-     * Método principal para iniciar el proceso de indexación.
-     */
     public void indexar() {
         System.out.println("[INDEXACIÓN] Iniciando...");
         long tiempoInicio = System.currentTimeMillis();
 
-        try (Stream<Path> paths = Files.walk(Paths.get(RUTA_SALIDA_PREPROCESADOR))) {
-            paths.filter(Files::isRegularFile)
-                    .parallel() // Procesamiento paralelo
-                    .forEach(this::procesarDocumento);
-
-            calcularIdfYActualizarIndice();
-            calcularLongitudPorDocumento();
-
-            guardarIndiceInvertido();
-            guardarIdf();
-            guardarLongitudDocumentos();
-        } catch (IOException e) {
-            System.err.println("Error durante la indexación: " + e.getMessage());
-        }
+        procesarDocumentos();
+        calcularIdfYActualizarIndice();
+        calcularLongitudPorDocumento();
+        guardarResultados();
 
         long tiempoFin = System.currentTimeMillis();
         System.out.println("[INDEXACIÓN] Finalizada en " + (tiempoFin - tiempoInicio) + " ms.");
     }
 
+    private void procesarDocumentos() {
+        try (Stream<Path> paths = Files.walk(Paths.get(Rutas.RUTA_CORPUS_PROCESADO))) {
+            paths.filter(Files::isRegularFile)
+                    .parallel()
+                    .forEach(this::procesarDocumento);
+        } catch (IOException e) {
+            System.err.println("[INDEXACIÓN (ERROR)] Error durante el procesamiento de documentos: " + e.getMessage());
+        }
+    }
 
-    /**
-     * Procesa un documento individual para calcular TF y construir el índice invertido.
-     *
-     * @param rutaDocumento Ruta al documento a procesar.
-     */
     private void procesarDocumento(Path rutaDocumento) {
         try {
             List<String> terminos = Files.readAllLines(rutaDocumento).stream()
                     .flatMap(linea -> Arrays.stream(linea.split("\\s+")))
-                    .toList();
+                    .collect(Collectors.toList());
 
-            if (terminos.isEmpty()) {
-                System.out.println("Documento vacío: " + rutaDocumento.getFileName());
-                return;
+            if (!terminos.isEmpty()) {
+                String nombreDocumento = rutaDocumento.getFileName().toString();
+                actualizarFrecuenciasTerminos(terminos, nombreDocumento);
+            } else {
+                System.out.println("[INDEXACIÓN (EXCEPCIÓN)] Documento vacío: " + rutaDocumento.getFileName());
             }
-
-            String nombreDocumento = rutaDocumento.getFileName().toString();
-            Map<String, Double> frecuenciaTerminos = new ConcurrentHashMap<>();
-
-            // Calcular la frecuencia de cada término en el documento
-            for (String termino : terminos) {
-                if (!termino.trim().isEmpty()) { // Comprueba que el término no esté vacío
-                    frecuenciaTerminos.merge(termino, 1.0, Double::sum);
-                }
-            }
-
-            // Calcular el TF para cada término y actualizar el índice invertido provisionalmente
-            Map<String, Double> tfTerminos = new ConcurrentHashMap<>();
-            frecuenciaTerminos.forEach((termino, frecuencia) -> {
-                double tf = 1 + Math.log(frecuencia);
-                tfTerminos.put(termino, tf);
-
-                // Actualizar el índice invertido con la frecuencia del término
-                indiceInvertido.computeIfAbsent(termino, k -> new IndiceInvertidoEntrada(0.0, new ConcurrentHashMap<>()))
-                        .getDocumentosConPeso().put(nombreDocumento, tf);
-            });
-
-            // Almacenar los TF de cada término para este documento
-            tfPorDocumento.put(nombreDocumento, tfTerminos);
         } catch (IOException e) {
-            System.err.println("Error al procesar el documento " + rutaDocumento + ": " + e.getMessage());
+            System.err.println("[INDEXACIÓN (ERROR)] Error al procesar el documento " + rutaDocumento + ": " + e.getMessage());
         }
     }
 
+    private void actualizarFrecuenciasTerminos(List<String> terminos, String nombreDocumento) {
+        Map<String, Double> frecuenciaTerminos = new ConcurrentHashMap<>();
+        Map<String, Double> tfTerminos = new ConcurrentHashMap<>();
 
-    /**
-     * Calcula el IDF para cada término y actualiza el índice invertido.
-     */
+        terminos.forEach(termino -> {
+            if (!termino.trim().isEmpty()) {
+                frecuenciaTerminos.merge(termino, 1.0, Double::sum);
+            }
+        });
+
+        frecuenciaTerminos.forEach((termino, frecuencia) -> {
+            double tf = 1 + Math.log(frecuencia);
+            tfTerminos.put(termino, tf);
+            actualizarIndiceInvertido(termino, nombreDocumento, tf);
+        });
+
+        tfPorDocumento.put(nombreDocumento, tfTerminos);
+    }
+
+    private void actualizarIndiceInvertido(String termino, String documento, double tf) {
+        indiceInvertido.computeIfAbsent(termino, k -> new IndiceInvertidoEntrada(0.0, new ConcurrentHashMap<>()))
+                .getDocumentosConPeso().put(documento, tf);
+    }
+
     private void calcularIdfYActualizarIndice() {
         int totalDocumentos = tfPorDocumento.size();
         indiceInvertido.forEach((termino, entrada) -> {
             double idf = Math.log((double) totalDocumentos / entrada.getDocumentosConPeso().size());
             idfPorTermino.put(termino, idf);
-
-            entrada.setIdf(idf); // Actualizar el valor de IDF en la entrada del índice invertido
-
-            entrada.getDocumentosConPeso().forEach((documento, tf) -> {
-                double tfIdf = tf * idf;
-                entrada.getDocumentosConPeso().put(documento, tfIdf);
-            });
+            entrada.setIdf(idf);
+            actualizarPesosDocumentos(entrada);
         });
     }
 
-    /**
-     * Calcula la longitud de cada documento basada en el peso TF-IDF de sus términos.
-     */
+    private void actualizarPesosDocumentos(IndiceInvertidoEntrada entrada) {
+        entrada.getDocumentosConPeso().forEach((documento, tf) -> {
+            double tfIdf = tf * entrada.getIdf();
+            entrada.getDocumentosConPeso().put(documento, tfIdf);
+        });
+    }
+
     private void calcularLongitudPorDocumento() {
         tfPorDocumento.forEach((documento, tfTerminos) -> {
-            double longitud = tfTerminos.values().stream()
+            double longitud = Math.sqrt(tfTerminos.values().stream()
                     .mapToDouble(peso -> peso * peso)
-                    .sum();
-            longitudPorDocumento.put(documento, Math.sqrt(longitud));
+                    .sum());
+            longitudPorDocumento.put(documento, longitud);
         });
     }
 
-    /**
-     * Guarda el índice invertido en un archivo.
-     */
+    private void guardarResultados() {
+        try {
+            guardarIndiceInvertido();
+            guardarIdf();
+            guardarLongitudDocumentos();
+        } catch (IOException e) {
+            System.err.println("[INDEXACIÓN (ERROR)] Error al guardar resultados: " + e.getMessage());
+        }
+    }
+
     private void guardarIndiceInvertido() throws IOException {
-        try (PrintWriter writer = new PrintWriter(Files.newBufferedWriter(Paths.get(RUTA_INDICE_INVERTIDO)))) {
+        try (PrintWriter writer = new PrintWriter(Files.newBufferedWriter(Paths.get(Rutas.RUTA_INDICE_INVERTIDO)))) {
             indiceInvertido.forEach((termino, entrada) -> {
-                String linea = termino + " → | " + entrada.getIdf() + " | ";
-                linea += entrada.getDocumentosConPeso().entrySet().stream()
-                        .map(entry -> "(" + entry.getKey() + "-peso " + entry.getValue() + ")")
-                        .collect(Collectors.joining(" "));
+                String linea = termino + " → | " + entrada.getIdf() + " | " +
+                        entrada.getDocumentosConPeso().entrySet().stream()
+                                .map(entry -> "(" + entry.getKey() + "-peso " + entry.getValue() + ")")
+                                .collect(Collectors.joining(" "));
                 writer.println(linea);
             });
         }
     }
 
-
-    /**
-     * Guarda los valores IDF en un archivo.
-     */
     private void guardarIdf() throws IOException {
-        try (PrintWriter writer = new PrintWriter(Files.newBufferedWriter(Paths.get(RUTA_IDF)))) {
-            idfPorTermino.forEach((termino, idf) ->
-                    writer.println(termino + ":" + idf));
+        try (PrintWriter writer = new PrintWriter(Files.newBufferedWriter(Paths.get(Rutas.RUTA_IDF)))) {
+            idfPorTermino.forEach((termino, idf) -> writer.println(termino + ":" + idf));
         }
     }
 
-    /**
-     * Guarda las longitudes de los documentos en un archivo.
-     */
     private void guardarLongitudDocumentos() throws IOException {
-        try (PrintWriter writer = new PrintWriter(Files.newBufferedWriter(Paths.get(RUTA_LONGITUD_DOCUMENTOS)))) {
-            longitudPorDocumento.forEach((documento, longitud) ->
-                    writer.println(documento + ":" + longitud));
+        try (PrintWriter writer = new PrintWriter(Files.newBufferedWriter(Paths.get(Rutas.RUTA_LONGITUD_DOCUMENTOS)))) {
+            longitudPorDocumento.forEach((documento, longitud) -> writer.println(documento + ":" + longitud));
         }
     }
 }
